--- a/PWA/Web.config
+++ b/PWA/Web.config
@@ -5,6 +5,7 @@
   -->
 <configuration>
   <system.web>
+	<pages theme="Day"/>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
